# Digital-twin

./: .dockerignore  CMakeLists.txt  Dockerfile.base  README  docker-compose.yml  docker-stack.yml  migrate.sh
cloud/: Dockerfile  cloud.cpp  cloud.hpp  cloudCallBack.cpp  cloudCallBack.hpp  main.cpp
common/: config.hpp  digital_human.cpp  digital_human.hpp  migration_manager.cpp  migration_manager.hpp  routing.json
data/: latency.csv  latency.json  latency2.csv  latency2.json  plot.py  received_data.csv  received_data.json  received_data1.json
edge/: Dockerfile  edge.cpp  edge.hpp  edgeCallback.cpp  edgeCallback.hpp  main.cpp
edge/home/: Dockerfile  main.cpp
edge/mobile/: Dockerfile  main.cpp
edge/work/: Dockerfile  main.cpp
fog/: Dockerfile  fog.cpp  fog.hpp  fogCallBack.cpp  fogCallBack.hpp  main.cpp
fog/fog1/: Dockerfile  main.cpp  mosquitto.conf
fog/fog2/: Dockerfile  main.cpp
logger/: reporter.cpp  reporter.h  reporter.hpp
twin/: Dockerfile  main.cpp  twin.cpp  twin.hpp  twinCallback.cpp  twinCallback.hpp
